# memographix

./: .dockerignore  BENCHMARKS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  fetch_corpus.py  run.py
benchmarks/corpora/: kubernetes.lock.json
benchmarks/docker/: Dockerfile  compose.yml
benchmarks/runners/: __init__.py  common.py  external.py  grep_runner.py  memographix_runner.py  naive_runner.py
benchmarks/tasks/: golden_tasks.json
crates/memographix-core/: Cargo.toml
crates/memographix-core/src/: lib.rs
docs/: AGENT_INTEGRATIONS.md  ARCHITECTURE.md  CONTRIBUTING.md  PYPI_RELEASE.md  REPEAT_TASK_MEMORY.md
python/memographix/: __init__.py  activation.py  agent.py  benchmark.py  cli.py  config.py  engine.py  integrations.py  mcp.py  models.py  registry.py  security.py  storage.py  tokens.py  workspace.py
scripts/: check_hygiene.py  verify_release_artifacts.py
tests/: conftest.py  test_benchmark_contract.py  test_cli.py  test_mcp_tools.py  test_workspace.py
