[package]
name = "memographix-core"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Rust fast path for Memographix local AI agent memory."
homepage = "https://github.com/coderalnaim/memographix"
repository = "https://github.com/coderalnaim/memographix"
readme = "../../README.md"

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
sha2 = "0.10"
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
extension-module = ["pyo3/extension-module"]
abi3-py310 = ["pyo3/abi3-py310"]
